--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Cesar Pena",
   "license": "ISC",
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
   },
