--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Cesar Pena",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.2.3",
     "axios": "^0.18.0",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
